--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
 // VAR
 @import 'partials/vars';
 // COMMONS (globals, default)
-@import 'partials/common';
+@import 'partials/commons';
 // UTILITIES
 @import 'partials/utilities';
 // HEADER
