--- a/src/scss/partials/_commons.scss
+++ b/src/scss/partials/_commons.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Segoe UI", -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 1.5;
 }
@@ -14,3 +14,4 @@ body {
     width: 1200px;
     margin: 0 auto;
 }
+
