--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $early-white: #f1f1f1;
 $black: #000;
 $grey: #666;
+$dark-grey: #101010;
 $light-grey: #989898;
 $dark-grey: #333;
 $blue: #009cff;
